methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:7: error: expected class or object definition
def ligne() {
^PatternPicture:14: error: expected class or object definition
def carre() {
^PatternPicture:19: error: expected class or object definition
def faireV1(c:Color) {
^PatternPicture:23: error: expected class or object definition
def faireV2(c:Color) {
^PatternPicture:28: error: Unmatched closing brace '}' ignored here
}
^